-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-aarch64, 11, 14, 15
-
Component/s: hotspot
-
b07
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8253170 | 11.0.10-oracle | Nick Gasson | P4 | Resolved | Fixed | b01 |
| JDK-8253110 | 11.0.10 | Nick Gasson | P4 | Resolved | Fixed | b01 |
| JDK-8260853 | openjdk8u292 | Andrew Hughes | P4 | Resolved | Fixed | b01 |
aarch64TestHook() is called from ICache::initialize() and allocates a 500k BufferBlob that it passes to entry() in assembler_aarch64.cpp which performs a self-test of the assembler. The BufferBlob needs to be explicitly freed or else it will hang around forever. Also we can just skip the allocation if ASSERT is not defined as the test is not performed in this case.
- backported by
-
JDK-8253110 AArch64: aarch64TestHook leaks a BufferBlob
-
- Resolved
-
-
JDK-8253170 AArch64: aarch64TestHook leaks a BufferBlob
-
- Resolved
-
-
JDK-8260853 AArch64: aarch64TestHook leaks a BufferBlob
-
- Resolved
-
- relates to
-
JDK-8257192 Integrate AArch64 JIT port into 8u
-
- Resolved
-