8237512: AArch64: aarch64TestHook leaks a BufferBlob Reviewed-by: adinn, aph